fixed spacing inside cards

--- a/scss/cards.scss
+++ b/scss/cards.scss
@@ -12,7 +12,7 @@
 	border-radius: $border-radius-0;
 	border: 1px solid $border-color;
 	overflow: hidden;
-	* {
+	:last-child {
 		margin-bottom: 0;
 	}
 }
